Archive2/34/747a8d05bfcc5a/output
main.cpp: In member function 'void function::call_helper(void (*)(argument_types ...), const std::vector<argument>&, seq<S ...>)':
main.cpp:102:37: error: expansion pattern 'get<S ...>(args)' contains no argument packs
             fn( get< S ... >( args )... );
                                     ^
